# common-py

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  definitions.py  pyproject.toml
.agents/summary/: product.md  structure.md  tech.md
.github/: pull_request_template.md
.github/workflows/: publish_package.yml  tag_and_release.yml
common_py/: __init__.py
common_py/logger/: __init__.py  formatters.py  logger.py
common_py/utils/: __init__.py  generate_badges.py  yaml_reader.py
tests/files/: coverage.xml  unit-tests.xml
tests/unit/logger/: test_logger.py
tests/unit/utils/: test_generate_badges.py  test_yaml_file.yaml  test_yaml_reader.py
